# localai-windows-starter

./: .env.example  .gitignore  Install Local AI.cmd  LICENSE  README.md  Start Local AI.cmd  Start-AI-Agent.ps1  Stop Local AI.cmd  ai-ab.ps1  ai-anywhere.ps1  ai-common.ps1  ai-firewall.ps1  ai-health-monitor.ps1  ai-model-aliases.ps1  ai-model-scout.ps1  ai-openwebui-thinklight.ps1  ai-perf.ps1  ai-power.ps1  ai-public-audit.ps1  ai-reboot-verify.ps1  ai-selftest.ps1  ai-task-common.ps1  ai-terminal-check.ps1  ai-update.ps1  ai-warm.ps1  docker-compose.yml  pyproject.toml  qwen-32k.Modelfile  qwen-grounded.Modelfile  qwen3-coder-agent.Modelfile  qwen3-grounded.Modelfile  qwen3.6-thinklight-grounded.Modelfile  web-nav-qwen2.5-coder-14b.Modelfile  web-nav-qwen2.5vl-7b.Modelfile  web-nav-qwen3.5-9b.Modelfile
docs/: HARDWARE-SUPPORT.md  SUPPLY-CHAIN.md  nanobrowser.md  webbrain.md
installer/: Install-LocalAI.ps1  README.md  bootstrap.ps1  installer-common.ps1  tiers.json
tests/: Invoke-Checks.ps1  test_anywhere_behavior.py  test_backup_behavior.py  test_compose_behavior.py  test_dashboard_behavior.py  test_dashboard_scout_behavior.py  test_firewall_behavior.py  test_game_mode_behavior.py  test_health_behavior.py  test_hwcaps_behavior.py  test_installer_vet_behavior.py  test_model_aliases_behavior.py  test_model_scout_behavior.py  test_perf_behavior.py  test_public_audit_behavior.py  test_python_scaffold.py  test_scout_categories_behavior.py  test_start_behavior.py  test_stop_behavior.py  test_system_info_behavior.py  test_update_behavior.py  test_warm_behavior.py  (+1 more)
(+35 files in other folders)
