[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localai"
version = "0.1.0"
description = "Python orchestration layer for a private local AI workspace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pywebview>=5.0; platform_system == 'Windows'",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.2",
  "ruff>=0.6",
]
windows = [
  "pywin32>=306; platform_system == 'Windows'",
  "wmi>=1.5.1; platform_system == 'Windows'",
]

[project.scripts]
localai = "localai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localai = ["static/*"]

[tool.pytest.ini_options]
addopts = ["-p", "no:cacheprovider"]
testpaths = ["tests"]
# Always test THIS checkout's src, not whichever editable `localai` install
# happens to be on the box (which can silently shadow it).
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "webview"
ignore_missing_imports = true
